--- a/google/index.html
+++ b/google/index.html
@@ -30,10 +30,34 @@
       gtag('config', 'AW-16940335819');
     </script>
     
+        <!-- Event snippet for contato - built-ins conversion page -->
+        <script>
+        function gtag_report_conversion(url) {
+            var callback = function () {
+                if (typeof(url) != 'undefined') {
+                    window.location = url;
+                }
+            };
+            if (typeof gtag === 'function') {
+                gtag('event', 'conversion', {
+                        'send_to': 'AW-16940335819/hSPHCIz03MAbEMuF5I0_',
+                        'value': 1.0,
+                        'currency': 'USD',
+                        'event_callback': callback
+                });
+                return false;
+            } else {
+                // Fallback: navigate immediately if gtag is not available
+                callback();
+                return true;
+            }
+        }
+        </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Built-ins Massachusetts | Innov Builders | Free Estimate</title>
-    <meta name="description" content="Transform your space with custom built-ins in Massachusetts & New Hampshire. Expert craftsmanship, 11+ years experience. Free estimate. Call (978) 871-0597">
+    <meta name="description" content="Transform your space with custom built-ins in Massachusetts & New Hampshire. Expert craftsmanship, 11+ years experience. Free estimate. Call (978) 878-7977">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -1441,7 +1465,7 @@
                 <img src="../assets/images/logo innov builders.jpg" alt="Innov Builders Logo">
             </div>
             <div class="header-cta">
-                <a href="tel:+19788710597" class="btn-header" aria-label="Call (978) 871-0597">
+                <a href="tel:+19788787977" class="btn-header" aria-label="Call (978) 878-7977">
                     <i class="fas fa-phone"></i> Call Now
                 </a>
                 <a href="#contact" class="btn-header">
@@ -1921,7 +1945,7 @@
                 <div class="contact-info-grid">
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <a href="tel:+19788710597" style="color: inherit; text-decoration: none;">(978) 871-0597</a>
+                        <a href="tel:+19788787977" style="color: inherit; text-decoration: none;">(978) 878-7977</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -1959,8 +1983,8 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Innov Builders — All Rights Reserved</p>
                 <p style="margin-top: 10px;">
-                    <a href="tel:+19788710597" style="color: #FFC300; text-decoration: none; font-weight: 600;">
-                        Call (978) 871-0597
+                    <a href="tel:+19788787977" style="color: #FFC300; text-decoration: none; font-weight: 600;">
+                        Call (978) 878-7977
                     </a>
                 </p>
             </div>
@@ -1968,7 +1992,7 @@
     </footer>
 
     <!-- FLOATING CALL BUTTON (click-to-call) -->
-    <a class="floating-call" id="floatingCall" href="tel:+19788710597" aria-label="Call Innov Builders">
+    <a class="floating-call" id="floatingCall" href="tel:+19788787977" aria-label="Call Innov Builders">
         <i class="fas fa-phone"></i>
         <div class="floating-call-text" id="floatingText">Talk to us right now</div>
     </a>
@@ -1988,6 +2012,20 @@
                 }
             });
         });
+
+        // Track call clicks with Google Ads conversion event
+        (function attachCallConversion(){
+            var telLinks = document.querySelectorAll('a[href^="tel:"]');
+            telLinks.forEach(function(el){
+                el.addEventListener('click', function(e){
+                    var href = el.getAttribute('href');
+                    if (typeof gtag_report_conversion === 'function') {
+                        e.preventDefault();
+                        gtag_report_conversion(href);
+                    }
+                });
+            });
+        })();
 
         // Smooth scroll for CTA buttons pointing to contact
         document.querySelectorAll('a.btn-primary[href="#contact"], a.btn-secondary[href="#contact"]').forEach(button => {
